Completed basic tests

--- a/app/.env
+++ b/app/.env
@@ -1,4 +1,5 @@
 PANGADFS_CROSSOVER_PLUGIN=crossover_default
+#PANGADFS_CROSSOVER_PLUGIN=crossover_all
 PANGADFS_POPULATE_PLUGIN=populate_default
 PANGADFS_FITNESS_PLUGIN=fitness_default
 PANGADFS_VALIDATE_PLUGIN=validate_default
