--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,9 @@ openpyxl>=3.0.0
 pytest>=6.0.0
 
 # Documentation dependencies
-mkdocs>=1.4.0
-mkdocs-material>=8.0.0
-mkdocstrings>=0.19.0
-pymdown-extensions>=9.0.0
+mkdocs>=1.5.0
+mkdocs-material>=9.0.0
+mkdocstrings>=0.22.0
+mkdocstrings-python>=1.0.0
+pymdown-extensions>=10.0.0
+mike>=1.1.0
